# iot-venture-f25-helldivers

./: README.md  sys0.graphml
.githooks/: pre-push
GNSS/: CMakeLists.txt
GNSS_sensor/: CMakeLists.txt  prj.conf
GNSS_sensor/src/: gnss_task.c  main.c
GNSS_sensor/src/sensor/: fake_sensor.c  sensor_task.c  sensor_task.h
aws_iot_sensor/: CMakeLists.txt  README.rst  index.html  index2.html  prj.conf
aws_iot_sensor/boards/: nrf9151dk_nrf9151_ns.overlay
aws_iot_sensor/src/: main.c
aws_iot_sensor/src/gnss/: gnss_task.c
aws_iot_sensor/src/horse_payload/: horse_payload.c
aws_iot_sensor/src/sensor/: horse_balance.h  sensor.c  sensor.h
aws_iot_sensor/tests/balance/: CMakeLists.txt  testcase.yaml
aws_iot_sensor/twister-out/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
aws_iot_sensor/twister-out/qemu_cortex_m3_ti_lm3s6965/zephyr/horse.balance.unit/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_info.yml  cmake_install.cmake  compile_commands.json  run_id.txt
aws_iot_sensor/twister-out/qemu_cortex_m3_ti_lm3s6965/zephyr/horse.balance.unit/modules/cmsis/: cmake_install.cmake
aws_iot_sensor/twister-out/qemu_cortex_m3_ti_lm3s6965/zephyr/horse.balance.unit/modules/hal_nordic/: cmake_install.cmake
aws_iot_sensor/twister-out/qemu_cortex_m3_ti_lm3s6965/zephyr/horse.balance.unit/modules/mcuboot/: cmake_install.cmake
aws_iot_sensor/twister-out/qemu_cortex_m3_ti_lm3s6965/zephyr/horse.balance.unit/modules/nrf/: cmake_install.cmake
aws_iot_sensor/twister-out/qemu_cortex_m3_ti_lm3s6965/zephyr/horse.balance.unit/modules/nrfxlib/: cmake_install.cmake
aws_iot_sensor/twister-out/qemu_cortex_m3_ti_lm3s6965/zephyr/horse.balance.unit/zephyr/: cmake_install.cmake  edt.pickle  linker.cmd.dep  linker_zephyr_pre0.cmd.dep  zephyr.dts.d  zephyr.dts.pre  zephyr.elf  zephyr.map  zephyr.stat  zephyr_pre0.elf  zephyr_pre0.map
aws_iot_sensor/twister-out/qemu_cortex_m3_ti_lm3s6965/zephyr/horse.balance.unit/zephyr/arch/: cmake_install.cmake
aws_iot_sensor/twister-out/qemu_cortex_m3_ti_lm3s6965/zephyr/horse.balance.unit/zephyr/boards/: cmake_install.cmake
aws_iot_sensor/twister-out/qemu_cortex_m3_ti_lm3s6965/zephyr/horse.balance.unit/zephyr/drivers/: cmake_install.cmake
aws_iot_sensor/twister-out/qemu_cortex_m3_ti_lm3s6965/zephyr/horse.balance.unit/zephyr/kconfig/: sources.txt
aws_iot_sensor/twister-out/qemu_cortex_m3_ti_lm3s6965/zephyr/horse.balance.unit/zephyr/lib/: cmake_install.cmake
aws_iot_sensor/twister-out/qemu_cortex_m3_ti_lm3s6965/zephyr/horse.balance.unit/zephyr/soc/: cmake_install.cmake
l9_e1/: priv.pem  (+3 more)
(+149 files in other folders)
